--- a/html/index.html
+++ b/html/index.html
@@ -4,9 +4,12 @@
 </head>
 
 <body>
-  <script src="base64.js"></script>
+  <canvas id="crt" width="512" height="256"></canvas>
+  
+  <script src="lib/base64.js"></script>
   <script src="files.js"></script>
-  <script src="Z80.js"></script>
+  <script src="lib/Z80.js"></script>
+  <script src="video.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
