--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,7 @@
   <script src="files.js"></script>
   <script src="lib/Z80.js"></script>
   <script src="video.js"></script>
+  <script src="driver.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
