Add nice declarative memory map

--- a/html/index.html
+++ b/html/index.html
@@ -11,6 +11,8 @@
   <script src="lib/Z80.js"></script>
   <script src="video.js"></script>
   <script src="driver.js"></script>
+  <script src="memmap.js"></script>
+  <script src="hl4-memmap.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
