--- a/html/index.html
+++ b/html/index.html
@@ -12,6 +12,8 @@
   <script src="video.js"></script>
   <script src="driver.js"></script>
   <script src="memmap.js"></script>
+  <script src="keyboard.js"></script>
+  <script src="hl4-keyboard.js"></script>
   <script src="hl4-memmap.js"></script>
   <script src="main.js"></script>
 </body>
