Reorganize a bit so that other machines are easier to add

--- a/html/index.html
+++ b/html/index.html
@@ -9,12 +9,15 @@
   <script src="lib/base64.js"></script>
   <script src="files.js"></script>
   <script src="lib/Z80.js"></script>
-  <script src="video.js"></script>
+
   <script src="driver.js"></script>
   <script src="memmap.js"></script>
   <script src="keyboard.js"></script>
+  
+  <script src="hl4-video.js"></script>
   <script src="hl4-keyboard.js"></script>
   <script src="hl4-memmap.js"></script>
+
   <script src="main.js"></script>
 </body>
 </html>
