Start AC/HL2 version

--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-  <canvas id="crt" width="512" height="256"></canvas>
+  <canvas id="crt" width="320" height="200"></canvas>
   
   <script src="lib/base64.js"></script>
   <script src="files.js"></script>
@@ -15,9 +15,8 @@
   <script src="memmap.js"></script>
   <script src="keyboard.js"></script>
   
-  <script src="hl4-video.js"></script>
-  <script src="hl4-keyboard.js"></script>
-  <script src="hl4-memmap.js"></script>
+  <script src="ac-video.js"></script>
+  <script src="ac-memmap.js"></script>
 
   <script src="main.js"></script>
 </body>
