--- a/html/index.html
+++ b/html/index.html
@@ -11,6 +11,7 @@
   <script src="lib/Z80.js"></script>
 
   <script src="driver.js"></script>
+  <script src="video.js"></script>
   <script src="memmap.js"></script>
   <script src="keyboard.js"></script>
   
