Hook up HL-2 keyboard

--- a/html/index.html
+++ b/html/index.html
@@ -17,6 +17,7 @@
   
   <script src="ac-video.js"></script>
   <script src="ac-memmap.js"></script>
+  <script src="ac-keyboard.js"></script>
 
   <script src="main.js"></script>
 </body>
