--- a/html/index.html
+++ b/html/index.html
@@ -1,10 +1,14 @@
 <!doctype html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <link rel="stylesheet" type="text/css" href="index.css"></link>
+    <!-- <meta name="viewport" content="width=1024, height=512"> -->
 </head>
 
 <body>
-  <canvas id="crt" width="320" height="200"></canvas>
+  <div class="fullscreen">
+    <canvas id="crt" width="320" height="200"></canvas>
+  </div>
   
   <script src="lib/base64.js"></script>
   <script src="files.js"></script>
