Rename `ac` to `hl2` for HomeLab-2

--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,6 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="stylesheet" type="text/css" href="index.css"></link>
-    <!-- <meta name="viewport" content="width=1024, height=512"> -->
 </head>
 
 <body>
@@ -19,9 +18,9 @@
   <script src="memmap.js"></script>
   <script src="keyboard.js"></script>
   
-  <script src="ac-video.js"></script>
-  <script src="ac-memmap.js"></script>
-  <script src="ac-keyboard.js"></script>
+  <script src="hl2/video.js"></script>
+  <script src="hl2/memmap.js"></script>
+  <script src="hl2/keyboard.js"></script>
 
   <script src="main.js"></script>
 </body>
