--- a/html/index.html
+++ b/html/index.html
@@ -17,6 +17,7 @@
   <script src="video.js"></script>
   <script src="memmap.js"></script>
   <script src="keyboard.js"></script>
+  <script src="tape.js"></script>
   
   <script src="hl2/video.js"></script>
   <script src="hl2/memmap.js"></script>
