Shuffle some code around so it will be easier to support multiple models

--- a/html/index.html
+++ b/html/index.html
@@ -22,6 +22,8 @@
   <script src="hl2/video.js"></script>
   <script src="hl2/memmap.js"></script>
   <script src="hl2/keyboard.js"></script>
+  <script src="hl2/core.js"></script>
+  <script src="hl2/machine.js"></script>
 
   <script src="main.js"></script>
 </body>
