--- a/html/index.html
+++ b/html/index.html
@@ -34,6 +34,19 @@
       <div id="tape-monitor" class="border border-dark border-1 rounded"></div>
     </div>
   </div>
+
+  <dialog id="tape-filesel" class="modal-dialog modal-dialog-scrollable">
+    <form method="dialog" class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5">Tapes</h1>
+        <button class="btn-close" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div id="tape-cards" class="card-group">
+        </div>
+      </div>
+    </form>
+  </dialog>
   
   <script src="lib/base64.js"></script>
   <script src="files.js"></script>
@@ -53,6 +66,7 @@
 
   <script src="ui/canvas.js"></script>
   <script src="ui/tape.js"></script>
+  <script src="ui/tape-filesel.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
