Fiddle with dialog styling

--- a/html/index.html
+++ b/html/index.html
@@ -35,7 +35,7 @@
     </div>
   </div>
 
-  <dialog id="tape-filesel" class="modal-dialog modal-dialog-scrollable">
+  <dialog id="tape-filesel">
     <form method="dialog" class="modal-content">
       <div class="modal-header">
         <h1 class="modal-title fs-5">Tapes</h1>
