Start groundwork towards saving to tape

--- a/html/index.html
+++ b/html/index.html
@@ -57,6 +57,7 @@
   <script src="memmap.js"></script>
   <script src="keyboard.js"></script>
   <script src="tape.js"></script>
+  <script src="audio.js"></script>
   
   <script src="hl2/video.js"></script>
   <script src="hl2/memmap.js"></script>
