Add a central clock

--- a/html/index.html
+++ b/html/index.html
@@ -65,6 +65,7 @@
   <script src="lib/Z80.js"></script>
 
   <script src="driver.js"></script>
+  <script src="clock.js"></script>
   <script src="video.js"></script>
   <script src="memmap.js"></script>
   <script src="keyboard.js"></script>
