--- a/html/index.html
+++ b/html/index.html
@@ -42,13 +42,17 @@
         <button class="btn-close" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <div id="tape-cards" class="card-group">
-          <div class="card" id="tape-new">
-            <div class="card-body">
-              <h5 class="card-title">
-                <i class="bi bi-plus-circle"></i>
-                New tape
-              </h5>
+        <div class="container">
+          <div id="tape-cards" class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card h-100" id="tape-new">
+                <div class="card-body">
+                  <h5 class="card-title">
+                    <i class="bi bi-plus-circle"></i>
+                    New tape
+                  </h5>
+                </div>
+              </div>
             </div>
           </div>
         </div>
